# amr_sim_pkg

./: CMakeLists.txt  CMakeLists.txt.save  README.md  package.xml
config/: ekf.yaml  nav2.yaml  slam.yaml
launch/: description.launch.py  gazebo.launch.py  nav2.launch.py  slam.launch.py  visualize_urdf.launch.py
meshes/: charging_station.dae  walls.dae  wr_shelves.dae
models/ChargingStation/: model.config  model.sdf
models/Walls/: model.sdf
models/WarehouseShelves/: model.config  model.sdf
models/amr/: model.config  model.sdf
models/amr/meshes/: rpi_lidar.stl
rviz/: gazebo.rviz  nav2.rviz  slam.rviz  visualize_urdf.rviz
urdf/: amr.urdf  amr_base.xacro  amr_xacro.urdf  camera.xacro  imu.xacro  laser.xacro  mecanum_wheel.xacro  omni_dir_move_controller.xacro
worlds/: empty.world  walls.world  warehouse_template.world
